adding more files

--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 /*
-Theme name: Bithug-Theme
-Version:1.0
+Theme Name: Bithug
+Theme URI: https://github.com/bit-hug-learning/Backend-blog-Wordpress
+Version: 1.0
 Description: Wordpress theme developed by the community
 Author: Rafael Garcia Garcia, Franco Roca - Bithug community
 Author URI: https://github.com/bit-hug-learning
-License: GNU General Public Licence v2 or later
-
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
+
